--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Rowdy Crowdy</title>
+        <link rel="stylesheet" type="text/css" href="style.css" />
+
+    </head>
+    <body>
+        <h1>Hello, World!</h1>
+        <p>Go Avs!</p>
+
+    </body>
+</html>
